--- a/android/build.properties
+++ b/android/build.properties
@@ -1,4 +1,4 @@
-titanium.platform=/Library/Application Support/Titanium/mobilesdk/osx/5.2.0.GENPERM/android
+titanium.platform=/Library/Application Support/Titanium/mobilesdk/osx/5.2.0.GA/android
 android.platform=/Users/fuerst/Library/android-sdk-macosx/platforms/android-23
 android.ndk=/Users/fuerst/Library/android-ndk-macosx/
 android.sdk=/Users/fuerst/Library/android-sdk-macosx/
